--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "phymongshe_shop",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://desipossa.github.io/phymongshe_shop",
+  "homepage": "https://cheesemom.github.io/shop1/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
